# bob-atm-scripts

./: .gitignore  LICENSE  main.py  pyproject.toml
assets/: bcp_branches.html  bcp_kiosks.html
assets/bancosol/beni/: atms.json  branches.json
assets/bancosol/chuquisaca/: atms.json  branches.json  sol_amigo.json  sol_amigo_express.json
assets/bancosol/cochabamba/: atms.json  branches.json  sol_amigo.json  sol_amigo_express.json
assets/bancosol/la_paz/: atms.json  branches.json  sol_amigo.json  sol_amigo_express.json
assets/bancosol/lapaz/: atms.json  branches.json  sol_amigo.json  sol_amigo_express.json
assets/bancosol/oruro/: atms.json  branches.json  sol_amigo.json  sol_amigo_express.json
assets/bancosol/pando/: atms.json  branches.json  sol_amigo_express.json
assets/bancosol/potosi/: atms.json  branches.json  sol_amigo.json  sol_amigo_express.json
assets/bancosol/santa_cruz/: branches.json  sol_amigo.json  (+1 more)
assets/baneco/: atms.json  branchatms.json  branches.json
assets/bcp/: atms.html
assets/bg/: branchatms.csv  branches_atms.json
assets/bisa/: branchatms.csv  branches_atms.json
assets/bmsc/: atms.csv  atms.json  branchatms.json  branches.csv  branches.json  tipotre.json
assets/bnb/: branchatms.json
scripts/: __init__.py
scripts/bg/: __init__.py  gana_branchatm.py
scripts/bisa/: __init__.py  bisa_branchatm.py
src/: __init__.py
src/dtos/: __init__.py
src/entities/: __init__.py  bank_service_point_entity.py
src/models/: bank_service_point.py
src/scripts/: __init__.py  bcp.py  bcpparser.py  const.py  csvparser.py  dfparser.py
(+70 files in other folders)
