[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc>=0.0.4",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "inflection>=0.5.1",
    "pandas>=3.0.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "sqlmodel>=0.0.32",
]
